# Rust.flutter_assets_tool

./: Cargo.toml  justfile
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/commands/: cli.rs  generate_completions.rs  mod.rs
src/commands/list_unused/: mod.rs
src/commands/migrate/: asset_gen.rs  flutter_gen.rs  mod.rs
src/core/: asset_usage.rs  filter_ignored_assets.rs  mod.rs
src/core/asset_metadata/: asset_metadata.rs  core.rs  mod.rs
src/core/configuration/: mod.rs
src/core/find_unused_assets/: mod.rs
src/core/flutter/: get_flutter_project_inner_directory_path.rs  mod.rs  pubspec_yaml.rs
src/core/migrate_flutter_gen_style/: mod.rs
src/core/testing_util/: artifact.rs
src/core/util/: dart_project_relocator.rs  mod.rs
src/core/util/fs/: mod.rs  read_file_recursively.rs  relative_path.rs
src/logger/: logger_setup.rs  mod.rs
tests/sample/flutter/dummy/: pubspec.yaml
tests/sample/flutter/snakeCaseDummy/: flutter_assets_tool.yaml  pubspec.yaml
tests/sample/flutter/snakeCaseDummy/lib/: expected_dot_delimited_main.dart  expected_snake_case_main.dart  main.dart
tests/sample/flutter/snakeCaseDummy/web/: index.html  manifest.json
