[package]
name = "flutter_assets_tool"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
clap_complete = "4.5.47"
once_cell = "1.21.3"
regex = "1.11.1"
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4.27"
thiserror = "2.0.12"
async-recursion = "1.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
recase = "0.3.0"
chrono = "0.4.40"
dotenvy = "0.15.7"
env_logger = "0.11.7"
anyhow = "1.0.97"
futures-util = "0.3.31"
fs_extra = "1.3.0"

[dev-dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
