[package]
name = "flutter_assets_tool"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
once_cell = "1.21.3"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.28"
thiserror = "2.0.17"
async-recursion = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
recase = "0.3.0"
chrono = "0.4.42"
dotenvy = "0.15.7"
env_logger = "0.11.8"
anyhow = "1.0.97"
futures-util = "0.3.31"
fs_extra = "1.3.0"

[dev-dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
