[package]
name = "flutter_assets_tool"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
once_cell = "1.21.4"
regex = "1.12.3"
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"
thiserror = "2.0.18"
async-recursion = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
recase = "0.5.1"
chrono = "0.4.44"
dotenvy = "0.15.7"
env_logger = "0.11.9"
anyhow = "1.0.102"
futures-util = "0.3.32"
fs_extra = "1.3.0"

[dev-dependencies]
uuid = { version = "1.22.0", features = ["v7"] }
